# CMakeSDLCross

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
